fixed bg not showing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 
  html,
  body {
-     background-image: url('/assets/welcome_bg.jpg');
+     background-image: url('/../assets/welcome_bg.jpg');
      background-size: cover;
  }
 
